--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "test": "jest --forceExit --detectOpenHandles  --watchAll --maxWorkers=1",
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,8 @@
     "express": "^4.17.2",
     "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
+    "mockgoose": "^8.0.4",
+    "mockingoose": "^2.15.2",
     "mongodb": "^4.4.0",
     "mongoose": "^6.2.1",
     "multer": "^1.4.4",
