--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/pavlo1998/myChat#readme",
   "dependencies": {
+    "@babel/types": "^7.18.4",
     "chai": "^4.3.6",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -38,7 +39,7 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "eslint": "^8.8.0",
-    "jest": "^28.1.0",
+    "jest": "^28.1.1",
     "superagent": "^7.1.3",
     "supertest": "^6.2.3"
   }
